static/css/main.css
* {
  box-sizing: border-box;
}

/* reset CSS */
table {
  font-size: 100%;
  border-collapse: collapse;
}
/* end reset CSS */

table tr:nth-child(2n) {
  background-color: #f6f8fa;
}

table tr {
  background-color: #fff;
  border-top: 1px solid #c6cbd1;
}

table th,
table td {
  margin: 0;
  padding: 6px 13px;
  border: 1px solid #dfe2e5;
}

details {
  border: 1px solid #aaa;
  border-radius: 4px;
  padding: 0.5em 0.5em 0;
}

summary {
  margin: -0.5em -0.5em 0;
  padding: 0.5em;
}

details[open] {
  padding: 0.5em;
}

details[open] summary {
  font-style: italic;
  border-bottom: 1px solid #aaa;
  margin-bottom: 0.5em;
}

body {
  font-family: "lucida grande", "lucida sans unicode", lucida, helvetica,
    "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
  font-size: 18px;
}

body.mobile {
  font-size: 30px;
}

p,
li {
  line-height: 1.8;
}

h1 {
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti,
    SimSun, serif;
}

h2 {
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti,
    SimSun, serif;
  margin-bottom: 60px;
  margin-bottom: 40px;
  padding: 5px;
  border-bottom: 2px #8e7b8b solid;
  width: 98%;
  line-height: 150%;
  color: #666666;
}

h3 {
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti,
    SimSun, serif;
  margin-top: 40px;
  margin-bottom: 30px;
  border-bottom: 1px #8e7b8b solid;
  width: 98%;
  line-height: 150%;
  color: #666666;
}

h4 {
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti,
    SimSun, serif;
  margin-top: 40px;
  margin-bottom: 30px;
  border-bottom: 1px #8e7b8b solid;
  width: 98%;
  line-height: 150%;
  color: #666666;
}

.box {
  padding: 2% 8% 5% 8%;
  border: 1px solid #8e7b8b;
}

li {
  margin-left: 10px;
}

blockquote {
  margin-left: 20px;
  padding: 0 20px 0 50px;
  margin-bottom: 15px;
  border-left: 2px solid #8dc23c;
}

blockquote p {
  line-height: 48px;
  font-style: italic;
  color: #888;
}

pre {
  font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO",
    Proggy, monospace;
  font-size: 85%;
  line-height: 1.45;
  font-weight: 500;
  background-color: #f4f4f4;
  border: 1px solid #e0e0e0;
  border-radius: 4px;
  padding: 4px;
  position: relative;
  display: block;
  width: 100%;
  overflow: auto;
}

pre > code {
  padding: 12px !important;
  display: block;
}

code {
  width: 100%;
  font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO",
    Proggy, monospace;
  white-space: pre;
  padding: 1px 5px;
  font-size: 1em;
}

li code,
p code {
  background-color: #eff0f1;
  border-radius: 3px;
}

a {
  text-decoration: none;
  cursor: crosshair;
  border-bottom: 1px dashed orange;
  color: #930ee4;
}

a:hover {
  background-color: #8e7b8b;
}

img {
  width: auto;
  height: auto;
  max-width: 100%;
  max-height: 100%;
  display: block;
  box-shadow: 0 0 10px #555;
  border-radius: 6px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 10px;
  margin-bottom: 10px;
  -webkit-box-shadow: 0 0 10px #555;
}

img.displayed {
  text-align: center;
  display: block;
}

hr {
  color: #8e7b8b;
  background: linear-gradient(
    90deg,
    rgba(251, 89, 74, 1) 0%,
    rgba(251, 89, 74, 1) 25%,
    rgba(251, 222, 75, 1) 25%,
    rgba(251, 222, 75, 1) 50%,
    rgba(112, 228, 112, 1) 50%,
    rgba(112, 228, 112, 1) 75%,
    rgba(51, 183, 255, 1) 75%
  );
  height: 13px;
}

p.notice {
  color: #aa4433;
  font-size: 14px;
}

div.tweet p {
  font-size: 16px;
  border: 1px solid #aaa;
  border-left: 10px solid #f28500;
  padding: 2px 0.5em 2px 0.5em;
  margin-bottom: 20px;
  background-color: #fbfbfb;
}

div.tweet i {
  color: brown;
  font-size: 14px;
  font-style: normal;
  border: 1px solid #aaa;
  margin-right: 0.5em;
  padding: 0px 2px;
}

div.outer {
  margin: 2% 5% 2% 5%;
}

body.mobile div.outer {
  margin: 2% 0% 2% 0%;
}

div.inner {
  margin: 0.5em auto;
  max-width: 1000px;
  padding: 2% 8% 4% 8%;
  border: 1px solid #8e7b8b;
  background-color: white;
}

body.mobile div.inner {
  margin: 0;
  padding: 2% 4% 6% 4%;
}

div.ad-banner {
  margin: 0% 14%;
}

body.mobile div.ad-banner {
  margin: 0;
}

.side-ad.mobile {
  display: none;
}

body.mobile .side-btn {
  display: none;
}

.side-btn {
  position: fixed;
  background-color: #fbf6ec;
  -ms-transform: translate(calc(-8vw - 100%), 0);
  -webkit-transform: translate(calc(-8vw - 100%), 0);
  transform: translate(calc(-8vw - 100%), 0);
  top: 50vh;
}
.side-btn a {
  display: block;
  color: #a57474;
}
.back {
  -ms-transform: rotate(7deg);
  -webkit-transform: rotate(7deg);
  transform: rotate(7deg);
}
.side-btn a:hover {
  -ms-transform: rotate(-7deg);
  -webkit-transform: rotate(-7deg);
  transform: rotate(-7deg);
  color: #930ee4;
}

kbd {
  /* Copy from stackoverflow.com */
  display: inline-block;
  margin: 0 0.1em;
  padding: 0.1em 0.6em;
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
  font-size: 11px;
  line-height: 1.4;
  color: #242729;
  text-shadow: 0 1px 0 #fff;
  background-color: #e1e3e5;
  border: 1px solid #adb3b9;
  border-radius: 3px;
  box-shadow: 0 1px 0 rgba(12, 13, 14, 0.2), 0 0 0 2px #fff inset;
  white-space: nowrap;
}

#edit-button {
  font-size: 1em;
  float: right;
  margin: 0 1rem;
  background: #cfd7ff;
  border: 1px solid #4e57ef;
  box-shadow: 3px 4px 0px #4e57ef;
}

pre .btn {
  -webkit-transition: opacity 0.3s ease-in-out;
  -o-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  opacity: 0;
  padding: 2px 6px;
  position: absolute;
  right: 4px;
  top: 4px;
}

pre:hover .btn,
pre .btn:focus {
  opacity: 1;
}

pre .clippy {
  margin: 0;
  margin-top: -3px;
  position: relative;
  top: 3px;
  width: 13px;
  display: inline;
  border-radius: unset;
  -webkit-box-shadow: 0 0 0px #555;
}

footer {
  padding-top: 10px !important;
}

.tags {
  font-family: medium-content-sans-serif-font, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;
  letter-spacing: 0;
  font-weight: 400;
  font-style: normal;
  padding: 0;
  list-style: none;
  list-style-image: none;
}

.tags > li {
  display: inline-block;
  border: none;
  color: rgba(0, 0, 0, 0.68);
  background: rgba(0, 0, 0, 0.05);
  padding: 5px 10px;
  border-radius: 3px;
}

.tags > li:hover {
  background-color: #8e7b8b;
}

.link {
  color: inherit;
  text-decoration: none !important;
  cursor: pointer;
}

